--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <color name="colorCyberpunkWhite">#F2E205</color>
+    <color name="colorCyberpunkYellow">#F2E205</color>
     <color name="colorCyberpunkRed">#EF2F48</color>
     <color name="colorCyberpunkGreen">#63CEA5</color>
     <color name="colorCyberpunkOrange">#EFA439</color>
