--- a/app/src/main/res/layout/image_row.xml
+++ b/app/src/main/res/layout/image_row.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/image_row_rl"
     android:layout_width="wrap_content"
@@ -16,7 +18,8 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/rounded_widget_background"
-        app:srcCompat="@color/colorEmpty" />
+        app:srcCompat="@color/colorEmpty"
+        android:contentDescription="@string/image" />
 
     <TextView
         android:id="@+id/image_row_tv"
