--- a/app/src/main/res/layout/activity_wallpaper_setter.xml
+++ b/app/src/main/res/layout/activity_wallpaper_setter.xml
@@ -34,7 +34,9 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp" />
+            android:layout_marginBottom="5dp"
+            android:scrollbarSize="1dp"
+            android:scrollbarThumbVertical="@color/colorCyberpunkRed" />
     </RelativeLayout>
 
     <TextView
@@ -43,6 +45,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="3dp"
         android:fontFamily="@font/cyberpunk_eng"
         android:text="@string/orlinskas_development"
         android:textColor="@color/colorCyberpunkRed"
