--- a/app/src/main/res/layout/config_layout.xml
+++ b/app/src/main/res/layout/config_layout.xml
@@ -48,7 +48,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginStart="5dp"
             android:layout_marginTop="15dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/cyberpunk_2"
             android:text="@string/config_head"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -124,6 +124,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="3dp"
         android:fontFamily="@font/cyberpunk_eng"
         android:text="@string/orlinskas_development"
         android:textColor="@color/colorCyberpunkRed"
