--- a/app/src/main/res/xml/widget_small_weather_metadata.xml
+++ b/app/src/main/res/xml/widget_small_weather_metadata.xml
@@ -2,9 +2,12 @@
 
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:label="SmallWeather"
     android:initialLayout="@layout/widget_small_weather"
+    android:previewImage="@drawable/logo_small_widget"
     android:minWidth="250dp"
     android:minHeight="40dp"
+    android:widgetCategory="home_screen|keyguard"
     android:updatePeriodMillis="100"
     android:configure="com.orlinskas.cyberpunk.ui.home.ConfigurationWidgetActivity">
 </appwidget-provider>
