--- a/app/src/main/res/layout/activity_message_to_author.xml
+++ b/app/src/main/res/layout/activity_message_to_author.xml
@@ -38,7 +38,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="0dp"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/cyberpunk_2"
             android:gravity="center_horizontal"
             android:shadowDy="2"
             android:shadowRadius="4"
@@ -78,25 +78,15 @@
         android:background="@drawable/grey_background">
 
         <ImageView
-            android:id="@+id/imageView51"
-            android:layout_width="72dp"
-            android:layout_height="59dp"
-            android:layout_below="@id/imageView511"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:contentDescription="@string/inst_im"
-            app:srcCompat="@drawable/inst" />
-
-        <ImageView
             android:id="@+id/imageView511"
-            android:layout_width="72dp"
+            android:layout_width="90dp"
             android:layout_height="59dp"
             android:layout_below="@id/textView81"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:contentDescription="@string/gmail_im"
-            app:srcCompat="@drawable/gmail" />
+            app:srcCompat="@drawable/icon_partner"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:id="@+id/textView161"
@@ -104,15 +94,15 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView81"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_toEndOf="@+id/imageView51"
-            android:autoLink="email"
+            android:layout_marginTop="25dp"
+            android:layout_toEndOf="@id/imageView511"
+            android:autoLink="web"
             android:clickable="true"
             android:focusable="true"
             android:fontFamily="sans-serif-light"
-            android:text="@string/my_gmail"
-            android:textColor="@color/colorTextBlack"
-            android:textSize="14sp" />
+            android:text="@string/partner_web"
+            android:textColor="@color/colorCyberpunkRed"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textView81"
@@ -122,30 +112,15 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/cyberpunk_2"
             android:gravity="center_horizontal"
             android:shadowDy="2"
             android:shadowRadius="4"
-            android:text="@string/mail"
+            android:text="@string/our_partner"
             android:textAllCaps="false"
             android:textColor="@color/colorCyberpunkRed"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/textView1611"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView81"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="110dp"
-            android:layout_toEndOf="@+id/imageView511"
-            android:autoLink="web"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="sans-serif-light"
-            android:text="@string/inst"
-            android:textColor="@color/colorTextBlack"
-            android:textSize="14sp" />
     </RelativeLayout>
 
     <TextView
