--- a/app/src/main/res/layout/activity_message_to_author.xml
+++ b/app/src/main/res/layout/activity_message_to_author.xml
@@ -3,6 +3,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_message_rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -79,23 +80,23 @@
 
         <ImageView
             android:id="@+id/imageView511"
-            android:layout_width="90dp"
-            android:layout_height="59dp"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
             android:layout_below="@id/textView81"
+            android:layout_centerHorizontal="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:contentDescription="@string/gmail_im"
-            app:srcCompat="@drawable/icon_partner"
-            android:layout_marginBottom="10dp" />
+            app:srcCompat="@drawable/icon_partner" />
 
         <TextView
             android:id="@+id/textView161"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView81"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="25dp"
-            android:layout_toEndOf="@id/imageView511"
+            android:layout_below="@+id/imageView511"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
             android:autoLink="web"
             android:clickable="true"
             android:focusable="true"
