--- a/app/src/main/res/layout/widget_troubleshooter_small.xml
+++ b/app/src/main/res/layout/widget_troubleshooter_small.xml
@@ -3,6 +3,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widget_troubleshooter_small_rl"
     android:layout_width="match_parent"
     android:layout_height="88dp">
@@ -15,15 +16,27 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
-        android:background="@drawable/im_background_small_widget">
-    </RelativeLayout>
+        android:background="@drawable/im_background_small_widget"></RelativeLayout>
+
+    <TextView
+        android:id="@+id/widget_troubleshooter_small_tv_city_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="monospace"
+        android:maxLength="15"
+        android:shadowColor="@color/colorCyberpunkGreen"
+        android:shadowRadius="6"
+        android:text="@string/loading_3"
+        android:textColor="@color/colorCyberpunkYellow"
+        android:textSize="12sp" />
 
     <ImageView
         android:id="@+id/widget_troubleshooter_small_im_update_btn"
         android:layout_width="140dp"
         android:layout_height="35dp"
-        android:layout_below="@+id/widget_troubleshooter_small_iv_wifi"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="7dp"
         android:layout_marginBottom="2dp"
         android:contentDescription="@string/image"
@@ -35,6 +48,7 @@
         android:layout_height="40dp"
         android:layout_below="@+id/widget_troubleshooter_small_rl_city_name"
         android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="30dp"
         android:contentDescription="@string/image"
         app:srcCompat="@drawable/im_btn_flashlight_off" />
@@ -44,6 +58,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_below="@+id/widget_troubleshooter_small_rl_city_name"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_toStartOf="@+id/widget_troubleshooter_small_iv_flashlight"
         android:contentDescription="@string/image"
@@ -52,10 +67,9 @@
     <LinearLayout
         android:id="@+id/widget_troubleshooter_small_ll_troubleshooter"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_below="@+id/widget_troubleshooter_small_rl_clock"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="false"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
@@ -127,30 +141,30 @@
 
     <RelativeLayout
         android:id="@+id/widget_troubleshooter_small_rl_clock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:layout_toStartOf="@+id/widget_troubleshooter_small_iv_wifi">
 
         <ImageView
             android:id="@+id/widget_troubleshooter_small_iv_weather_icon"
             android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_below="@id/widget_troubleshooter_small_digital_clock"
-            android:layout_marginTop="-7dp"
-            android:layout_marginEnd="10dp"
-            android:layout_toStartOf="@+id/textView2_small"
+            android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@id/widget_troubleshooter_small_digital_clock"
             android:contentDescription="@string/image" />
 
         <TextClock
             android:id="@+id/widget_troubleshooter_small_digital_clock"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_height="match_parent"
             android:fontFamily="sans-serif-thin"
             android:shadowColor="@color/colorCyberpunkGreen"
             android:shadowRadius="6"
@@ -164,21 +178,18 @@
             android:id="@+id/widget_troubleshooter_small_tv_weather_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/widget_troubleshooter_small_digital_clock"
-            android:layout_toEndOf="@+id/textView2_small"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@id/widget_troubleshooter_small_iv_weather_icon"
             android:fontFamily="sans-serif-medium"
             android:shadowColor="@color/colorCyberpunkRed"
             android:shadowRadius="4"
             android:textAlignment="center"
             android:textColor="@color/colorCyberpunkRed"
             android:typeface="normal" />
-
-        <TextView
-            android:id="@+id/textView2_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/widget_troubleshooter_small_digital_clock"
-            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
@@ -190,18 +201,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10dp">
 
-        <TextView
-            android:id="@+id/widget_troubleshooter_small_tv_city_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:fontFamily="monospace"
-            android:maxLength="15"
-            android:shadowColor="@color/colorCyberpunkGreen"
-            android:shadowRadius="6"
-            android:text="@string/loading_3"
-            android:textColor="@color/colorCyberpunkYellow"
-            android:textSize="12sp" />
     </RelativeLayout>
 
 
